--- a/package.json
+++ b/package.json
@@ -9,12 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/dayjs": "^2.16.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.14",
+    "@mui/x-date-pickers": "^5.0.8",
+    "@next/font": "^13.0.4",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-alert-dialog": "^1.0.2",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "dayjs": "^1.11.6",
+    "js-cookie": "^3.0.1",
+    "material-ui": "^0.15.0",
     "next": "13.0.4",
+    "radix-ui": "^0.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-number-format": "^5.1.2",
+    "react-toastify": "^9.1.1",
     "typescript": "4.9.3"
   }
 }
